# serializer version: 1
# name: test_exception_summary
  '''
  1 future(s) did not return a result:
  
  * HostInfo(connection_info=ConnectionInfo(address='127.0.0.1', port=9000), shard_num=1, replica_num=1, host_cluster_type='online', host_cluster_role='data'): Syntax error: failed at position 1 ('invalid'): invalid query. Expected one of: Query, Query with output, EXPLAIN, EXPLAIN, SELECT query, possibly with UNION, list of union elements, SELECT query, subquery, possibly with UNION, SELECT subquery, SELECT quer...
  '''
# ---
# name: test_exception_summary.1
  '''
  1 future(s) did not return a result:
  
  * HostInfo(connection_info=ConnectionInfo(address='127.0.0.1', port=9000), shard_num=1, replica_num=1, host_cluster_type='online', host_cluster_role='data'): Unknown table expression identifier 'invalid_table_name' in scope SELECT * FROM invalid_table_name. 
  '''
# ---
# name: test_exception_summary.2
  '''
  1 future(s) did not return a result:
  
  * HostInfo(connection_info=ConnectionInfo(address='127.0.0.1', port=9000), shard_num=1, replica_num=1, host_cluster_type='online', host_cluster_role='data'): custom error
  '''
# ---
